# mortest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: levels.cpp  main.cpp  menu.cpp  mor.hpp  mortest.conf  mortest.data  translators.cpp
